--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <h3>FILMS</h3>
                         <div class="video-grid">
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('thumbnail1.png')">
+                                <div class="video-thumbnail" style="background-image: url('images/thumbnail1.png')">
                                     <div class="video-overlay">
                                         <span>CHAMPIONSHIP MATCH</span>
                                         <div class="play-icon">►</div>
@@ -51,7 +51,7 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('thumbnail2.png')">
+                                <div class="video-thumbnail" style="background-image: url('images/thumbnail2.png')">
                                     <div class="video-overlay">
                                         <span>RINGSIDE INTERVIEW</span>
                                         <div class="play-icon">►</div>
@@ -59,7 +59,7 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('thumbnail3.png')">
+                                <div class="video-thumbnail" style="background-image: url('images/thumbnail3.png')">
                                     <div class="video-overlay">
                                         <span>ENTRANCE COMPILATION</span>
                                         <div class="play-icon">►</div>
@@ -67,7 +67,7 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('thumbnail4.png')">
+                                <div class="video-thumbnail" style="background-image: url('images/thumbnail4.png')">
                                     <div class="video-overlay">
                                         <span>TITLE CELEBRATION</span>
                                         <div class="play-icon">►</div>
@@ -75,7 +75,7 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('thumbnail5.png')">
+                                <div class="video-thumbnail" style="background-image: url('images/thumbnail5.png')">
                                     <div class="video-overlay">
                                         <span>RIVALRY SPOTLIGHT</span>
                                         <div class="play-icon">►</div>
@@ -83,7 +83,7 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('thumbnail6.png')">
+                                <div class="video-thumbnail" style="background-image: url('images/thumbnail6.png')">
                                     <div class="video-overlay">
                                         <span>FINISHING MOVES</span>
                                         <div class="play-icon">►</div>
@@ -91,7 +91,8 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('wrestling ring.png')">
+                                <!-- this file exists and contains a space; kept as-is -->
+                                <div class="video-thumbnail" style="background-image: url('images/wrestling ring.png')">
                                     <div class="video-overlay">
                                         <span>RINGSIDE DRAMA</span>
                                         <div class="play-icon">►</div>
@@ -99,7 +100,8 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('band_in_ring.png')">
+                                <!-- MISSING: band_in_ring.png not in your images list -->
+                                <div class="video-thumbnail" style="background-image: url('images/band_in_ring.png')">
                                     <div class="video-overlay">
                                         <span>MUSIC SHOWCASE</span>
                                         <div class="play-icon">►</div>
@@ -107,7 +109,7 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('video_background.png')">
+                                <div class="video-thumbnail" style="background-image: url('images/video_background.png')">
                                     <div class="video-overlay">
                                         <span>STUDIO SESSIONS</span>
                                         <div class="play-icon">►</div>
@@ -115,7 +117,8 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('boxing_ring_cameras.png')">
+                                <!-- MISSING: boxing_ring_cameras.png not in your images list -->
+                                <div class="video-thumbnail" style="background-image: url('images/boxing_ring_cameras.png')">
                                     <div class="video-overlay">
                                         <span>BEHIND THE SCENES</span>
                                         <div class="play-icon">►</div>
@@ -123,7 +126,8 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('wrestling_ring_night')">
+                                <!-- MISSING: wrestling_ring_night (no extension) not in your images list -->
+                                <div class="video-thumbnail" style="background-image: url('images/wrestling_ring_night')">
                                     <div class="video-overlay">
                                         <span>NIGHT SHOWDOWN</span>
                                         <div class="play-icon">►</div>
@@ -131,7 +135,7 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('layer1.png')">
+                                <div class="video-thumbnail" style="background-image: url('images/layer1.png')">
                                     <div class="video-overlay">
                                         <span>ATMOSPHERIC PROMO</span>
                                         <div class="play-icon">►</div>
@@ -139,7 +143,7 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('layer2.png')">
+                                <div class="video-thumbnail" style="background-image: url('images/layer2.png')">
                                     <div class="video-overlay">
                                         <span>MOTION HIGHLIGHTS</span>
                                         <div class="play-icon">►</div>
@@ -147,7 +151,7 @@
                                 </div>
                             </div>
                             <div class="video-item">
-                                <div class="video-thumbnail" style="background-image: url('layer3.png')">
+                                <div class="video-thumbnail" style="background-image: url('images/layer3.png')">
                                     <div class="video-overlay">
                                         <span>CINEMATIC SEQUENCE</span>
                                         <div class="play-icon">►</div>
@@ -169,7 +173,7 @@
                         <p>His directing style is collaborative but precise, bringing together the best crew of talent that fits each specific project individually. If you're an artist, a brand, or a producer with an ambitious idea, KVP can bring it to life with precision, style, and absolutely zero bullshit.</p>
                     </div>
                     <div class="about-image">
-                        <img src="johnkprofile.jpeg" alt="John Kopanski - Filmmaker">
+                        <img src="images/johnkprofile.jpeg" alt="John Kopanski - Filmmaker">
                     </div>
                 </div>
             </div>
