Update KVP logo in the intro section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <div class="panel-content">
                 <div class="wrestling-ring-bg"></div>
                 <div class="intro-text">
+                    <div class="kvp-logo-container">
+    <img src="images/KVP updatedlogo no BG.png" alt="KVP Logo" class="kvp-logo">
+</div>
                     <button class="contact-btn">GET IN TOUCH</button>
                 </div>
             </div>
